# zEdzPic

./: .gitignore  Makefile  Makefile.in  README.md  app.c  config.h.in  configure.ac  ui.ui
src/: app.c  ui.ui  zedzpic.c  zedzpic.h
